--- a/FirstApp/Base.lproj/Main.storyboard
+++ b/FirstApp/Base.lproj/Main.storyboard
@@ -1,13 +1,15 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14B25" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="pS6-QY-1LZ">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Main View-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="MainViewController" customModule="FirstApp" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -15,11 +17,165 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="uVK-Xi-qn7">
+                                <rect key="frame" x="255" y="72" width="92" height="54"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="uVK-Xi-qn7" secondAttribute="height" multiplier="163:96" id="jyt-E9-qEm"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="35"/>
+                                <state key="normal" title="Music">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <segue destination="j2T-aP-9pr" kind="show" identifier="showMusicModule" id="Sm8-3X-iwa"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" red="0.90307257770000005" green="0.91558420439999999" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstItem="uVK-Xi-qn7" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="8" id="djx-aq-E0c"/>
+                            <constraint firstAttribute="centerX" secondItem="uVK-Xi-qn7" secondAttribute="centerX" constant="-0.5" id="wsf-rE-fXd"/>
+                        </constraints>
                     </view>
+                    <navigationItem key="navigationItem" title="Main View" id="nDg-dK-0cF"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="1130" y="998"/>
+        </scene>
+        <!--Music View Controller-->
+        <scene sceneID="PI5-wT-WaV">
+            <objects>
+                <viewController id="j2T-aP-9pr" customClass="MusicViewController" customModule="FirstApp" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="Rdq-QV-Z4C"/>
+                        <viewControllerLayoutGuide type="bottom" id="oiL-9x-16E"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="pWO-60-JdV">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="yqS-id-0dp">
+                                <rect key="frame" x="200" y="72" width="200" height="251"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="yqS-id-0dp" secondAttribute="height" multiplier="289:278" id="3P2-cl-eHm"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="200"/>
+                                <state key="normal" title="▶︎">
+                                    <color key="titleColor" red="0.5" green="0.0" blue="0.5" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <variation key="default">
+                                    <mask key="constraints">
+                                        <exclude reference="3P2-cl-eHm"/>
+                                    </mask>
+                                </variation>
+                                <connections>
+                                    <action selector="musicButtons:" destination="j2T-aP-9pr" eventType="touchUpInside" id="cat-o4-XAG"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="u0U-rk-7UD">
+                                <rect key="frame" x="192" y="288" width="217" height="304"/>
+                                <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="250"/>
+                                <state key="normal" title="◼︎">
+                                    <color key="titleColor" red="0.5" green="0.0" blue="0.5" alpha="1" colorSpace="calibratedRGB"/>
+                                </state>
+                                <connections>
+                                    <action selector="musicButtons:" destination="j2T-aP-9pr" eventType="touchUpInside" id="ZjN-C8-fNa"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="80x-y5-2s3">
+                                <rect key="frame" x="248" y="174" width="104" height="251"/>
+                                <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="200"/>
+                                <state key="normal" title="ll">
+                                    <color key="titleColor" red="0.5" green="0.0" blue="0.5" alpha="1" colorSpace="calibratedRGB"/>
+                                </state>
+                                <connections>
+                                    <action selector="musicButtons:" destination="j2T-aP-9pr" eventType="touchUpInside" id="JMH-cJ-4kc"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" red="0.90307257770000005" green="0.91558420439999999" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstAttribute="centerY" secondItem="u0U-rk-7UD" secondAttribute="centerY" id="2DP-xS-bqV"/>
+                            <constraint firstAttribute="centerX" secondItem="80x-y5-2s3" secondAttribute="centerX" id="3Cn-bi-41R"/>
+                            <constraint firstItem="u0U-rk-7UD" firstAttribute="leading" secondItem="80x-y5-2s3" secondAttribute="trailing" constant="8" symbolic="YES" id="3Fs-ql-oua"/>
+                            <constraint firstItem="u0U-rk-7UD" firstAttribute="centerY" secondItem="yqS-id-0dp" secondAttribute="centerY" id="5UF-gh-FeV"/>
+                            <constraint firstAttribute="centerY" secondItem="yqS-id-0dp" secondAttribute="centerY" id="63s-sb-gpk"/>
+                            <constraint firstItem="80x-y5-2s3" firstAttribute="top" secondItem="yqS-id-0dp" secondAttribute="bottom" constant="-149" id="AnH-ex-mLp"/>
+                            <constraint firstItem="yqS-id-0dp" firstAttribute="top" secondItem="Rdq-QV-Z4C" secondAttribute="bottom" constant="8" symbolic="YES" id="Bcm-6k-YsU"/>
+                            <constraint firstItem="u0U-rk-7UD" firstAttribute="centerY" secondItem="80x-y5-2s3" secondAttribute="centerY" id="C2f-ex-FrF"/>
+                            <constraint firstItem="u0U-rk-7UD" firstAttribute="width" secondItem="80x-y5-2s3" secondAttribute="height" multiplier="199:180" id="DgU-b5-tHh"/>
+                            <constraint firstItem="u0U-rk-7UD" firstAttribute="width" secondItem="yqS-id-0dp" secondAttribute="height" multiplier="199:251" id="ESz-Tv-8IR"/>
+                            <constraint firstAttribute="centerX" secondItem="yqS-id-0dp" secondAttribute="centerX" id="FJk-u2-Lr9"/>
+                            <constraint firstAttribute="centerY" secondItem="80x-y5-2s3" secondAttribute="centerY" id="FJy-fS-Kfc"/>
+                            <constraint firstItem="80x-y5-2s3" firstAttribute="leading" secondItem="yqS-id-0dp" secondAttribute="trailing" constant="8" symbolic="YES" id="GRk-TB-vGc"/>
+                            <constraint firstAttribute="centerY" secondItem="80x-y5-2s3" secondAttribute="centerY" id="Mtr-PE-dPl"/>
+                            <constraint firstAttribute="centerY" secondItem="u0U-rk-7UD" secondAttribute="centerY" id="P5i-S9-9Nk"/>
+                            <constraint firstAttribute="centerY" secondItem="yqS-id-0dp" secondAttribute="centerY" id="QMo-Tx-fJm"/>
+                            <constraint firstItem="u0U-rk-7UD" firstAttribute="height" secondItem="80x-y5-2s3" secondAttribute="height" id="SxB-h3-EMi"/>
+                            <constraint firstAttribute="centerX" secondItem="yqS-id-0dp" secondAttribute="centerX" id="YXG-ue-FdE"/>
+                            <constraint firstItem="u0U-rk-7UD" firstAttribute="height" secondItem="80x-y5-2s3" secondAttribute="height" id="bdw-cf-cPO"/>
+                            <constraint firstAttribute="centerX" secondItem="yqS-id-0dp" secondAttribute="centerX" id="cAD-dy-rs8"/>
+                            <constraint firstItem="u0U-rk-7UD" firstAttribute="top" secondItem="80x-y5-2s3" secondAttribute="bottom" constant="-137" id="d6H-Db-Wkz"/>
+                            <constraint firstItem="yqS-id-0dp" firstAttribute="leading" secondItem="pWO-60-JdV" secondAttribute="leadingMargin" id="ecq-r2-aBx"/>
+                            <constraint firstAttribute="centerY" secondItem="80x-y5-2s3" secondAttribute="centerY" id="rLm-Pq-IfK"/>
+                            <constraint firstAttribute="centerY" secondItem="yqS-id-0dp" secondAttribute="centerY" id="uce-3b-0Eu"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="u0U-rk-7UD" secondAttribute="trailing" id="v3P-cG-O3f"/>
+                            <constraint firstAttribute="centerX" secondItem="80x-y5-2s3" secondAttribute="centerX" id="vc6-OK-9ob"/>
+                            <constraint firstAttribute="centerX" secondItem="u0U-rk-7UD" secondAttribute="centerX" id="wUk-Qx-zZG"/>
+                            <constraint firstItem="oiL-9x-16E" firstAttribute="top" secondItem="u0U-rk-7UD" secondAttribute="bottom" constant="8" symbolic="YES" id="y4o-Et-5iK"/>
+                            <constraint firstItem="u0U-rk-7UD" firstAttribute="height" secondItem="yqS-id-0dp" secondAttribute="height" id="z9s-Bw-Xbu"/>
+                        </constraints>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="63s-sb-gpk"/>
+                                <exclude reference="FJk-u2-Lr9"/>
+                                <exclude reference="QMo-Tx-fJm"/>
+                                <exclude reference="cAD-dy-rs8"/>
+                                <exclude reference="ecq-r2-aBx"/>
+                                <exclude reference="uce-3b-0Eu"/>
+                                <exclude reference="3Cn-bi-41R"/>
+                                <exclude reference="FJy-fS-Kfc"/>
+                                <exclude reference="GRk-TB-vGc"/>
+                                <exclude reference="Mtr-PE-dPl"/>
+                                <exclude reference="2DP-xS-bqV"/>
+                                <exclude reference="3Fs-ql-oua"/>
+                                <exclude reference="5UF-gh-FeV"/>
+                                <exclude reference="C2f-ex-FrF"/>
+                                <exclude reference="DgU-b5-tHh"/>
+                                <exclude reference="ESz-Tv-8IR"/>
+                                <exclude reference="P5i-S9-9Nk"/>
+                                <exclude reference="SxB-h3-EMi"/>
+                                <exclude reference="bdw-cf-cPO"/>
+                                <exclude reference="v3P-cG-O3f"/>
+                                <exclude reference="z9s-Bw-Xbu"/>
+                            </mask>
+                        </variation>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="IdS-J9-iUP" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1892" y="998"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="NDU-3Z-4dw">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="pS6-QY-1LZ" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="IK7-cd-q26">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="Rhv-9Q-0j4"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="GCU-jH-YDk" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="380" y="998"/>
         </scene>
     </scenes>
 </document>
