--- a/FirstApp/Base.lproj/Main.storyboard
+++ b/FirstApp/Base.lproj/Main.storyboard
@@ -4,6 +4,7 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
+        <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
     </dependencies>
     <scenes>
         <!--Main View-->
@@ -36,14 +37,35 @@
                                     <segue destination="j2T-aP-9pr" kind="show" identifier="showMusicModule" id="Sm8-3X-iwa"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="JYs-w2-bjR">
+                                <rect key="frame" x="24" y="134" width="552" height="54"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="JYs-w2-bjR" secondAttribute="height" multiplier="163:96" id="chR-4g-kht"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="35"/>
+                                <state key="normal" title="Graphs">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <variation key="default">
+                                    <mask key="constraints">
+                                        <exclude reference="chR-4g-kht"/>
+                                    </mask>
+                                </variation>
+                                <connections>
+                                    <segue destination="BSM-v6-hpn" kind="showDetail" identifier="showGraphingModule" id="39g-aE-flZ"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" red="0.90307257770000005" green="0.91558420439999999" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
+                            <constraint firstAttribute="trailingMargin" secondItem="JYs-w2-bjR" secondAttribute="trailing" constant="8" id="15c-iB-FFA"/>
+                            <constraint firstItem="JYs-w2-bjR" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="8" id="3LK-pH-XZB"/>
                             <constraint firstItem="uVK-Xi-qn7" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="8" id="B1I-VA-GKZ"/>
                             <constraint firstItem="uVK-Xi-qn7" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="8" id="NI8-Y4-M1Y"/>
                             <constraint firstItem="uVK-Xi-qn7" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="8" id="QEH-9F-yvf"/>
                             <constraint firstAttribute="trailingMargin" secondItem="uVK-Xi-qn7" secondAttribute="trailing" constant="237" id="RT1-we-zjw"/>
                             <constraint firstItem="uVK-Xi-qn7" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="8" id="WXL-px-9Zu"/>
+                            <constraint firstItem="JYs-w2-bjR" firstAttribute="top" secondItem="uVK-Xi-qn7" secondAttribute="bottom" constant="8" id="aWe-G1-xNp"/>
                             <constraint firstAttribute="trailingMargin" secondItem="uVK-Xi-qn7" secondAttribute="trailing" constant="8" id="cNU-54-Eux"/>
                             <constraint firstItem="uVK-Xi-qn7" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="8" id="djx-aq-E0c"/>
                             <constraint firstAttribute="trailingMargin" secondItem="uVK-Xi-qn7" secondAttribute="trailing" constant="8" id="hb0-XT-sjI"/>
@@ -300,6 +322,131 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="IdS-J9-iUP" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1892" y="998"/>
+        </scene>
+        <!--Graphing View Controller-->
+        <scene sceneID="bm0-XK-YAo">
+            <objects>
+                <viewController id="BSM-v6-hpn" customClass="GraphingViewController" customModule="FirstApp" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="bhx-uk-gcr"/>
+                        <viewControllerLayoutGuide type="bottom" id="CcR-0F-ccV"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="2O2-4G-Oca">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" minValue="0.0" maxValue="100" translatesAutoresizingMaskIntoConstraints="NO" id="cHx-yV-nQy">
+                                <rect key="frame" x="14" y="64" width="572" height="31"/>
+                                <color key="tintColor" red="0.5" green="0.0" blue="0.5" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="20" id="dns-RZ-m0c"/>
+                                </constraints>
+                                <variation key="default">
+                                    <mask key="constraints">
+                                        <exclude reference="dns-RZ-m0c"/>
+                                    </mask>
+                                </variation>
+                                <connections>
+                                    <action selector="changeValueSlider:" destination="BSM-v6-hpn" eventType="valueChanged" id="65h-wQ-xl2"/>
+                                </connections>
+                            </slider>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pxc-tL-bDT" customClass="PushButtonView" customModule="FirstApp" customModuleProvider="target">
+                                <rect key="frame" x="250" y="112" width="100" height="100"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="100" id="RPD-zw-a02"/>
+                                    <constraint firstAttribute="height" constant="100" id="i7N-gw-2m9"/>
+                                </constraints>
+                                <state key="normal">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="color" keyPath="fillColor">
+                                        <color key="value" red="0.5" green="0.0" blue="0.5" alpha="1" colorSpace="calibratedRGB"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                                <connections>
+                                    <action selector="pushValue" destination="BSM-v6-hpn" eventType="touchUpInside" id="NPJ-oc-MXk"/>
+                                </connections>
+                            </button>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="End-7u-sQe" customClass="GraphView" customModule="FirstApp" customModuleProvider="target">
+                                <rect key="frame" x="16" y="242" width="568" height="350"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="color" keyPath="backgroundStartColor">
+                                        <color key="value" red="0.90307257770000005" green="0.91558420439999999" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="color" keyPath="backgroundEndColor">
+                                        <color key="value" red="0.5" green="0.0" blue="0.5" alpha="1" colorSpace="calibratedRGB"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="color" keyPath="graphStartColor">
+                                        <color key="value" red="0.90307257770000005" green="0.91558420439999999" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="color" keyPath="graphEndColor">
+                                        <color key="value" red="0.5" green="0.0" blue="0.5" alpha="1" colorSpace="calibratedRGB"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="color" keyPath="graphLineColor">
+                                        <color key="value" red="0.57760793011258582" green="0.74947254427116827" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                            </view>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="42D-aF-yzJ">
+                                <rect key="frame" x="16" y="20" width="568" height="36"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="30" id="iRI-DA-o5N"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="30"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" red="0.90307257770000005" green="0.91558420439999999" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstItem="42D-aF-yzJ" firstAttribute="top" secondItem="2O2-4G-Oca" secondAttribute="topMargin" constant="20" id="1Z5-hz-5Vu"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="cHx-yV-nQy" secondAttribute="trailing" constant="5" id="3h5-B2-eiE"/>
+                            <constraint firstAttribute="centerX" secondItem="pxc-tL-bDT" secondAttribute="centerX" id="3sL-4i-vbQ"/>
+                            <constraint firstItem="bhx-uk-gcr" firstAttribute="top" secondItem="42D-aF-yzJ" secondAttribute="bottom" constant="-17" id="8vy-bX-SSk"/>
+                            <constraint firstItem="End-7u-sQe" firstAttribute="top" secondItem="pxc-tL-bDT" secondAttribute="bottom" multiplier="1.1" constant="8" symbolic="YES" id="AnM-Mh-TvG"/>
+                            <constraint firstItem="pxc-tL-bDT" firstAttribute="top" secondItem="cHx-yV-nQy" secondAttribute="bottom" constant="8" id="EST-W8-fJe"/>
+                            <constraint firstAttribute="centerY" secondItem="pxc-tL-bDT" secondAttribute="centerY" constant="139" id="Ics-Kc-Ctt"/>
+                            <constraint firstItem="42D-aF-yzJ" firstAttribute="leading" secondItem="2O2-4G-Oca" secondAttribute="leadingMargin" id="LhL-dU-DwX"/>
+                            <constraint firstItem="CcR-0F-ccV" firstAttribute="top" secondItem="End-7u-sQe" secondAttribute="bottom" constant="8" symbolic="YES" id="P3w-bj-w5Z"/>
+                            <constraint firstItem="bhx-uk-gcr" firstAttribute="top" secondItem="42D-aF-yzJ" secondAttribute="bottom" multiplier="2" constant="8" symbolic="YES" id="PBd-D4-wfW"/>
+                            <constraint firstItem="cHx-yV-nQy" firstAttribute="leading" secondItem="2O2-4G-Oca" secondAttribute="leadingMargin" id="S95-Eo-nCo"/>
+                            <constraint firstItem="cHx-yV-nQy" firstAttribute="top" secondItem="42D-aF-yzJ" secondAttribute="bottom" constant="8" symbolic="YES" id="TId-9Q-QSk"/>
+                            <constraint firstItem="bhx-uk-gcr" firstAttribute="top" secondItem="42D-aF-yzJ" secondAttribute="bottom" constant="8" symbolic="YES" id="XLx-r1-Vpb"/>
+                            <constraint firstItem="End-7u-sQe" firstAttribute="leading" secondItem="2O2-4G-Oca" secondAttribute="leadingMargin" id="aOp-b4-mc3"/>
+                            <constraint firstAttribute="centerY" secondItem="42D-aF-yzJ" secondAttribute="centerY" id="fe6-S8-5f6"/>
+                            <constraint firstAttribute="centerX" secondItem="cHx-yV-nQy" secondAttribute="centerX" id="iX4-mr-a3g"/>
+                            <constraint firstItem="cHx-yV-nQy" firstAttribute="trailing" secondItem="2O2-4G-Oca" secondAttribute="trailingMargin" id="jCD-xi-Afx"/>
+                            <constraint firstItem="End-7u-sQe" firstAttribute="trailing" secondItem="2O2-4G-Oca" secondAttribute="trailingMargin" id="ltn-OS-hIa"/>
+                            <constraint firstItem="pxc-tL-bDT" firstAttribute="top" secondItem="cHx-yV-nQy" secondAttribute="bottom" multiplier="1.1" constant="8" symbolic="YES" id="m3K-pu-thu"/>
+                            <constraint firstItem="cHx-yV-nQy" firstAttribute="trailing" secondItem="2O2-4G-Oca" secondAttribute="trailingMargin" id="oVO-gT-Thn"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="42D-aF-yzJ" secondAttribute="trailing" id="vCA-D0-jFU"/>
+                            <constraint firstItem="cHx-yV-nQy" firstAttribute="top" secondItem="bhx-uk-gcr" secondAttribute="bottom" constant="8" symbolic="YES" id="wjW-jR-UgU"/>
+                        </constraints>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="fe6-S8-5f6"/>
+                                <exclude reference="8vy-bX-SSk"/>
+                                <exclude reference="PBd-D4-wfW"/>
+                                <exclude reference="XLx-r1-Vpb"/>
+                                <exclude reference="3h5-B2-eiE"/>
+                                <exclude reference="oVO-gT-Thn"/>
+                                <exclude reference="wjW-jR-UgU"/>
+                                <exclude reference="EST-W8-fJe"/>
+                                <exclude reference="Ics-Kc-Ctt"/>
+                            </mask>
+                        </variation>
+                    </view>
+                    <connections>
+                        <outlet property="graphView" destination="End-7u-sQe" id="qja-Ud-QFU"/>
+                        <outlet property="label" destination="42D-aF-yzJ" id="fn1-6c-g5m"/>
+                        <outlet property="slider" destination="cHx-yV-nQy" id="8pC-Zk-7ZU"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Jh1-gf-lmA" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1838" y="1850"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="NDU-3Z-4dw">
