--- a/FirstApp/Base.lproj/Main.storyboard
+++ b/FirstApp/Base.lproj/Main.storyboard
@@ -68,7 +68,7 @@
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Kwc-NN-IzG">
                                 <rect key="frame" x="24" y="322" width="552" height="54"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="35"/>
-                                <state key="normal" title="C++">
+                                <state key="normal" title="C++ and multithreading">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
@@ -631,11 +631,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="yeU-8K-77I">
-                                <rect key="frame" x="24" y="281" width="552" height="37"/>
-                                <color key="color" red="0.5" green="0.0" blue="0.5" alpha="1" colorSpace="calibratedRGB"/>
-                            </activityIndicatorView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="wordWrap" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="e7w-1J-ZFS">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="e7w-1J-ZFS">
                                 <rect key="frame" x="24" y="326" width="568" height="266"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="40"/>
                                 <color key="textColor" red="0.5" green="0.0" blue="0.5" alpha="1" colorSpace="calibratedRGB"/>
@@ -651,14 +647,21 @@
                                     <action selector="goAction" destination="Zbc-H4-3J3" eventType="touchUpInside" id="Izy-Nd-gY2"/>
                                 </connections>
                             </button>
+                            <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="yeU-8K-77I">
+                                <rect key="frame" x="24" y="281" width="568" height="37"/>
+                                <color key="color" red="0.5" green="0.0" blue="0.5" alpha="1" colorSpace="calibratedRGB"/>
+                            </activityIndicatorView>
                         </subviews>
                         <color key="backgroundColor" red="0.90307257770000005" green="0.91558420439999999" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
+                            <constraint firstItem="ZPz-S2-TlN" firstAttribute="trailing" secondItem="dmz-p8-oa0" secondAttribute="trailingMargin" constant="8" id="4dU-gQ-j1o"/>
                             <constraint firstAttribute="centerY" secondItem="yeU-8K-77I" secondAttribute="centerY" constant="0.5" id="51L-7o-mwM"/>
                             <constraint firstAttribute="trailingMargin" secondItem="yeU-8K-77I" secondAttribute="trailing" constant="8" id="6H5-1D-Xlr"/>
                             <constraint firstItem="lOy-2H-7B2" firstAttribute="top" secondItem="e7w-1J-ZFS" secondAttribute="bottom" constant="8" symbolic="YES" id="D6r-6F-qZS"/>
+                            <constraint firstItem="yeU-8K-77I" firstAttribute="trailing" secondItem="dmz-p8-oa0" secondAttribute="trailingMargin" constant="8" id="Ipu-LL-gTn"/>
                             <constraint firstItem="e7w-1J-ZFS" firstAttribute="trailing" secondItem="dmz-p8-oa0" secondAttribute="trailingMargin" constant="8" id="JHW-92-uhy"/>
                             <constraint firstItem="e7w-1J-ZFS" firstAttribute="leading" secondItem="dmz-p8-oa0" secondAttribute="leadingMargin" constant="8" id="Y1A-PS-h5D"/>
+                            <constraint firstItem="e7w-1J-ZFS" firstAttribute="trailing" secondItem="dmz-p8-oa0" secondAttribute="trailingMargin" constant="8" id="bQB-uh-V7z"/>
                             <constraint firstItem="ZPz-S2-TlN" firstAttribute="leading" secondItem="dmz-p8-oa0" secondAttribute="leadingMargin" constant="8" id="cGv-pe-8eM"/>
                             <constraint firstItem="e7w-1J-ZFS" firstAttribute="top" secondItem="yeU-8K-77I" secondAttribute="bottom" constant="8" symbolic="YES" id="cOf-q4-ZON"/>
                             <constraint firstItem="yeU-8K-77I" firstAttribute="leading" secondItem="dmz-p8-oa0" secondAttribute="leadingMargin" constant="8" id="eQ4-jS-iw7"/>
@@ -666,6 +669,13 @@
                             <constraint firstItem="ZPz-S2-TlN" firstAttribute="top" secondItem="lPe-tg-vBe" secondAttribute="bottom" constant="8" symbolic="YES" id="qRo-fg-p2N"/>
                             <constraint firstItem="yeU-8K-77I" firstAttribute="top" secondItem="ZPz-S2-TlN" secondAttribute="bottom" constant="8" symbolic="YES" id="wzK-Kt-TES"/>
                         </constraints>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="lDI-Mt-bKi"/>
+                                <exclude reference="6H5-1D-Xlr"/>
+                                <exclude reference="JHW-92-uhy"/>
+                            </mask>
+                        </variation>
                     </view>
                     <connections>
                         <outlet property="activityIndicator" destination="yeU-8K-77I" id="gCM-8t-xSt"/>
